# stpyv8

./: .gitignore  .pylintrc  .travis.yml  CMakeLists.txt  CREDITS.txt  NOTES  README.md  STPyV8.py  STPyV8.pyi  SoirV8.py  SpyV8.py  install-ubuntu.sh  ruff.toml  settings.py  setup.py
.github/workflows/: build-debian-debug.yml  build-debian.yml  build-linux-debug.yml  build-linux.yml  build-osx-arm.yml  build-osx-debug.yml  build-osx-py38.yml  build-osx.yml  build-ubuntu-debug.yml  build-ubuntu.yml  build-windows.yml  build.yml  debian.yml  linux.yml  osx-arm64.yml  osx-debug.yml  osx.yml  release.yml  (+15 more)
docker/: Dockerfile  libstdc++.so.6.0.28
docs/: Makefile  make.bat
examples/: circle.py  console.py  global.py  meaning.py  simple.js  simple.py
pyv8-to-port/: AST.cpp  AST.h  Config.h  Context.cpp  Context.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  Exception.cpp  Exception.h  Locker.cpp  Locker.h  PrettyPrinter.cpp  PrettyPrinter.h  PyV8.cpp  PyV8.vcproj  PyV8.vs2010.vcxproj  Utils.cpp  Utils.h  V8Internal.h  Wrapper.cpp  Wrapper.h  probes.d  tttt
src/: .Wrapper.cpp.swp  Config.h  Context.cpp  Context.h  Engine.cpp  Engine.h  Exception.cpp  Exception.h  Isolate.cpp  Isolate.h  Locker.cpp  Locker.h  Main.cpp  Makefile  Platform.cpp  Platform.h  STPyV8.cpp  SoirV8.cpp  SpyV8.cpp  Utils.cpp  Utils.h  Wrapper.cpp  Wrapper.h
tests/: _test_Context.py  smalltest.py  testContext.py  test_Context.py  test_Engine.py  test_ICU.py  test_Isolate.py  test_Locker.py  test_MultiJavascriptThread.py  test_MultiPythonThread.py  test_Multithread.py  test_Thread.py  test_Wrapper.py
(+11 files in other folders)
